--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "react": "15.4.2",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "15.4.2"
   },
   "devDependencies": {
